# settlebridge-ai

./: .env.example  .gitignore  README.md  docker-compose.yml  mock_mediator.py  test_training_loop.py
backend/: alembic.ini  pyproject.toml  requirements.txt
backend/app/: config.py  main.py  seed.py
backend/app/gateway/: alerts.py  audit.py  health.py  policy_engine.py  proxy.py  reputation_cache.py  startup.py
backend/app/middleware/: auth.py
backend/app/models/: __init__.py  assist_session.py  bounty.py  category.py  claim.py  contract.py  gateway.py  notification.py  score_history.py  snapshot.py  submission.py  training.py  training_run.py  user.py
backend/app/routes/: agents.py  assist.py  auth.py  bounties.py  categories.py  claims.py  compliance.py  contact.py  contracts.py  gateway.py  notifications.py  score_history.py  stats.py  submissions.py  training.py
backend/app/schemas/: assist.py  bounty.py  claim.py  contract.py  gateway.py  notification.py  submission.py  user.py
backend/app/services/: assist_service.py  bounty_service.py  claim_service.py  contract_service.py  conversation_engine.py  exchange.py  federation.py  mediator.py  notification_service.py  (+6 more)
backend/migrations/: env.py
charts/gateway/: Chart.yaml  values.yaml
deploy/aws/: cloudformation.yaml  deploy-ecs.sh
frontend/: index.html  marketplace.html  package-lock.json  package.json  vite.config.ts  vite.marketplace.config.ts
frontend/src/: App.tsx  app.css  main.tsx  marketplace.tsx
harness/: README.md  harness.py  pyproject.toml
scripts/: cancel_open_bounties.py
(+133 files in other folders)
