[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "settlebridge-harness"
version = "0.1.0"
description = "Iteration harness for the SettleBridge self-improving agent loop"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.27",
    "tenacity>=8.2",
]

[project.optional-dependencies]
dev = ["pytest", "pytest-asyncio", "respx"]
viz = ["plotly>=5.0", "matplotlib>=3.7"]
